--- a/Intranet-V2/src/scss/header/_header.scss
+++ b/Intranet-V2/src/scss/header/_header.scss
@@ -1,4 +1,8 @@
 @use '../custom' as *;
+body{
+    background-color: #f0f0f0f2;
+    color: #313A46;
+}
 .encabezado-prin{
     @extend .d-flex, .justify-content-between;
     .logo{
